# bitshares1-core

./: .gitignore  CMakeLists.txt
libraries/: CMakeLists.txt
